HW5/E-2.2.23-IntegerProperty/wdir_msg/compile.err

IntegerProperty.java:72: error: variable i is already defined in method factor(int)
            return factors.stream().mapToInt(i -> i).toArray();}
                                             ^
1 error


